# voxelSelection

./: .gitignore  pyproject.toml
data_structure/: MLFormatSSDVoxelHitsDataStructure.txt  rawNCsFromMusunDataStructure.txt  rawPhotonsFromNCsDataStructure.txt
evaluation/: analyzeMusunNCs.ipynb  compareOptimizedPMTsToHomogeneousSetup.py  comparePMTCoverage.py  comparePmtSsd.py  evaluateEfficiency.py  musunOptimizeDetectionTime.py  optimizeDetectionTime.py  plotAndCheckGreedySelectedVoxels.ipynb  ssdVoxelHitHistogramm.py  testComparePMTCoverage.py
evaluation/ratio_derivation/: check_ssd_postprocessed.py  compare_coverages.py  compare_pmt_ssd.py  correlate_ssd_pmt.py  ssd_hit_histogram.py  wall_gradient_diagnostic.py  zone_ratio_analysis.py
musun_nc_analysis/: analyseMusunNCs.py  lightAnalysisHomogeneousPMTs.py
src/compareOptimizedPMTsToBaseline/: comparePMTCoverage.py
src/core/: greedyVoxelSelection.py  voxelImportanceMap.py
src/homogeneousVoxelSelection/: voxelSelection.py
src/optimizePitAndWallDistance/: homogeneousOptimizeDetectionTime.py
src/plotGreedyCoverage/: compareGreedyCoverage.py  plotGreedyCoverage.py
src/pmt_ssd_area_ratios/: checkSSDProPostRatio.py  comparePMTCoverage.py  findWallGradientReason.py  pmt_ssd_zone_ratio_analysis.py  zoneDetectionRatio.py
src/pmtopt/: data_loading.py  evaluate_coverages.py  geometry.py  greedy.py  homogeneous.py  main.py  plotting.py  ratio_scaling.py  rotate.py  sample_efficiency_range.py  sample_w2_range.py  sensitivity.py  w2_plot_helpers.py
tests/: test_FoM_formular  test_rotate.py  test_wasserstein.py
(+18 files in other folders)
